--- a/distribution.html
+++ b/distribution.html
@@ -24,8 +24,22 @@
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
-                        <li><a href="distribution.html" class="active"><span>Дистрибуция</span></a></li>
-                        <li><a href="products.html"><span>Продукция</span></a></li>
+                        <li>
+                            <a href="distribution.html" class="active">
+                                <span>Дистрибуция</span>
+                            </a>
+                            <ul>
+                                <li><a href="distribution.html">Украина</a></li>
+                                <li><a href="distribution_export.html">Экспорт</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="products.html"><span>Продукция</span></a>
+                            <ul>
+                                <li><a href="products.html">Собственные</a></li>
+                                <li><a href="products_import.html">Импорт</a></li>
+                            </ul>
+                        </li>
                         <li><a href="career.html"><span>Карьера</span></a></li>
                         <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
@@ -47,6 +61,45 @@
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
                     организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
                     (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
+        <div class="map">
+            <div class="map__image">
+                <img src="img/ukraine.svg" alt="">
+            </div>
+            <div class="map__info">
+                <div class="map__info-buttons">
+                    <button class="btn btn-distribution">Дистрибьюция </button>
+                    <button class="btn btn-distribution transparent">Export</button>
+                </div>
+                <div class="map__info-title">
+                    Modern Trade
+                </div>
+                <div class="map__info-text">
+                    Представлены в 16 национальных сетевых магазинах по всей территории Украины
+                </div>
+                <div class="map__info-title">
+                    Tradition Trade
+                </div>
+
+                <ul>
+                    <li> <b> 80 дистрибьюторов по всей территории
+                            Украины</b></li>
+                    <li> Более <b> 2 000 Торговых представителей</b></li>
+                    <li>
+                        Более  <b> 35 000 активных торговых точек. </b></li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="text-block">
+            <div class="container">
+                Равным образом консультация с широким активом требуют от нас анализа системы обучения кадров,
+                соответствует насущным потребностям. С другой стороны дальнейшее развитие различных форм деятельности
+                позволяет оценить значение соответствующий условий активизации. С другой стороны реализация намеченных
+                плановых заданий способствует подготовки и реализации систем массового участия. Задача организации, в
+                особенности же сложившаяся структура организации способствует подготовки и реализации соответствующий
+                условий активизации.
             </div>
         </div>
 
