--- a/distribution_export.html
+++ b/distribution_export.html
@@ -19,13 +19,12 @@
                 <div class="header-panel__left">
                     <a href="index.html" class="logo"><img src="img/main-logo.svg" alt=""></a>
                 </div>
-
                 <nav>
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
                         <li>
-                            <a href="distribution.html">
+                            <a href="distribution.html" class="active">
                                 <span>Дистрибуция</span>
                             </a>
                             <ul>
@@ -41,7 +40,7 @@
                             </ul>
                         </li>
                         <li><a href="career.html"><span>Карьера</span></a></li>
-                        <li><a href="contacts.html" class="active"><span>Контакты</span></a></li>
+                        <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
                 <div class="language">
@@ -52,9 +51,19 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="about-page">
-        <div class="container">
-
+    <main class="distribution-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="top-panel__title">Дистрибуция
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
+        <div class="map">
+            <img src="img/world.svg" alt="">
         </div>
 
         <div class="bottom-panel">
