--- a/career.html
+++ b/career.html
@@ -24,8 +24,22 @@
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
                         <li><a href="about.html"><span>О компании</span></a></li>
-                        <li><a href="distribution.html"><span>Дистрибуция</span></a></li>
-                        <li><a href="products.html"><span>Продукция</span></a></li>
+                        <li>
+                            <a href="distribution.html">
+                                <span>Дистрибуция</span>
+                            </a>
+                            <ul>
+                                <li><a href="distribution.html">Украина</a></li>
+                                <li><a href="distribution_export.html">Экспорт</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="products.html"><span>Продукция</span></a>
+                            <ul>
+                                <li><a href="products.html">Собственные</a></li>
+                                <li><a href="products_import.html">Импорт</a></li>
+                            </ul>
+                        </li>
                         <li><a href="career.html" class="active"><span>Карьера</span></a></li>
                         <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
