--- a/distribution_export.html
+++ b/distribution_export.html
@@ -19,6 +19,7 @@
                 <div class="header-panel__left">
                     <a href="index.html" class="logo"><img src="img/main-logo.svg" alt=""></a>
                 </div>
+
                 <nav>
                     <ul>
                         <li><a href="index.html"><span>Главная</span></a></li>
@@ -63,7 +64,31 @@
             </div>
         </div>
         <div class="map">
-            <img src="img/world.svg" alt="">
+            <div class="map__image">
+                <img src="img/world.svg" alt="">
+            </div>
+            <div class="map__info">
+                <div class="map__info-buttons">
+                    <a href="distribution.html"> <button class="btn btn-distribution transparent">Дистрибьюция </button></a>
+                    <a href="distribution_export.html"><button class="btn btn-distribution">Export</button></a>
+                </div>
+                <div class="map__info-title">
+                    Export
+                </div>
+                <div class="map__info-text">
+                    Экспортируем нашу продукцию в страны Европы, Азии и Африки
+                </div>
+            </div>
+        </div>
+        <div class="text-block">
+            <div class="container">
+                Равным образом консультация с широким активом требуют от нас анализа системы обучения кадров,
+                соответствует насущным потребностям. С другой стороны дальнейшее развитие различных форм деятельности
+                позволяет оценить значение соответствующий условий активизации. С другой стороны реализация намеченных
+                плановых заданий способствует подготовки и реализации систем массового участия. Задача организации, в
+                особенности же сложившаяся структура организации способствует подготовки и реализации соответствующий
+                условий активизации.
+            </div>
         </div>
 
         <div class="bottom-panel">
