--- a/distribution.html
+++ b/distribution.html
@@ -69,8 +69,8 @@
             </div>
             <div class="map__info">
                 <div class="map__info-buttons">
-                    <button class="btn btn-distribution">Дистрибьюция </button>
-                    <button class="btn btn-distribution transparent">Export</button>
+                    <a href="distribution.html"> <button class="btn btn-distribution">Дистрибьюция </button></a>
+                    <a href="distribution_export.html"><button class="btn btn-distribution transparent">Export</button></a>
                 </div>
                 <div class="map__info-title">
                     Modern Trade
