--- a/products.html
+++ b/products.html
@@ -52,9 +52,65 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="about-page">
-        <div class="container">
+    <main class="products-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="breadcrumbs">
+                    <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
+                    <a class="breadcrumbs__item" href="career.html"><span>Карьера</span></a>
+                    <span class="breadcrumbs__item">Собственная продукция</span>
+                </div>
+                <div class="top-panel__title">Собственная продукция
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
 
+        <div class="container">
+            <div class="title">Собственные ТМ</div>
+            <div class="tm-list">
+                <div class="tm-list__item"><img src="img/own1.png" alt=""></div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <div class="tm-list__item"><img src="img/own2.png" alt=""></div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <div class="tm-list__item"><img src="img/own3.png" alt=""></div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <div class="tm-list__item"><img src="img/own4.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own5.png" alt=""></div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <div class="tm-list__item"><img src="img/own6.png" alt=""></div>
+                <div class="tm-list__item">
+                    <div class="tm-list__item--text">
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                    </div>
+                </div>
+                <button class="btn btn-subscribe">Импортные ТМ</button>
+            </div>
+        
         </div>
 
         <div class="bottom-panel">
