--- a/career.html
+++ b/career.html
@@ -9,7 +9,6 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 
 <body>
@@ -52,9 +51,117 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="about-page">
-        <div class="container">
+    <main class="career-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="breadcrumbs">
+                    <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
+                    <span class="breadcrumbs__item">Карьера</span>
+                </div>
+                <div class="top-panel__title">Карьера
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
+        <div class="vacancies">
+            <div class="container">
+                <div class="title">Доступные вакансии</div>
+                <div class="vacancies__list m-scrollbar">
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по продажам</div>
+                        <div class="vacancies__list_item--text">Требования: Опыт работы с сегменте от 1
+                            года(предпочтительно) Хорошо развитые коммуникативные
+                            навыки, грамотная речь Возраст от 23 до 45лет Проживание в г. Киев Презентабельный внешний
+                            вид
+                            Обязанности:...</div>
+                    </div>
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по работе с торговыми сетями</div>
+                        <div class="vacancies__list_item--text">Требования к кандидатам: образование высшее; опыт работы
+                            в сфере продаж - не менее 1 года; опыт
+                            работы с широким ассортиментом товаров; опыт делового общения с VIP клиентами по телефону,
+                            посредством электронной...</div>
+                    </div>
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по работе с клиентами</div>
+                        <div class="vacancies__list_item--text">Требования к кандидатам: образование высшее; опыт работы
+                            в сфере продаж - не менее 1 года; опыт
+                            работы с широким ассортиментом товаров; опыт делового общения с VIP клиентами по телефону,
+                            посредством электронной...</div>
+                    </div>
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по продажам</div>
+                        <div class="vacancies__list_item--text">Требования: Опыт работы с сегменте от 1
+                            года(предпочтительно) Хорошо развитые коммуникативные
+                            навыки, грамотная речь Возраст от 23 до 45лет Проживание в г. Киев Презентабельный внешний
+                            вид
+                            Обязанности:...</div>
+                    </div>
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по работе с торговыми сетями</div>
+                        <div class="vacancies__list_item--text">Требования к кандидатам: образование высшее; опыт работы
+                            в сфере продаж - не менее 1 года; опыт
+                            работы с широким ассортиментом товаров; опыт делового общения с VIP клиентами по телефону,
+                            посредством электронной...</div>
+                    </div>
+                    <div class="vacancies__list_item">
+                        <div class="vacancies__list_item--title"> Менеджер по работе с клиентами</div>
+                        <div class="vacancies__list_item--text">Требования к кандидатам: образование высшее; опыт работы
+                            в сфере продаж - не менее 1 года; опыт
+                            работы с широким ассортиментом товаров; опыт делового общения с VIP клиентами по телефону,
+                            посредством электронной...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="career">
+            <div class="container">
+                <div class="title">Карьера в GBT</div>
+                <div class="career__text">
+                    Вас ожидает уникальный опыт работы в кампании-производителе алкогольного направления, командировки и
+                    тренинги, общение с профессионалами своего дела.
+                </div>
+                <div class="career__list">
+                    <div class="career__list_item">
+                        <div class="career__list_item--image"><img src="img/command.png" alt=""></div>
+                        <div class="career__list_item--title">ЛЮДИ</div>
+                        <p class="career__list_item--text">Мы – команда, изменяющая мир; мы принимаем смелые решения,
+                            мыслим глобально и работаем с
+                            общей целью. Мы ценим целеустремлённых, инициативных, энергичных и творческих людей, умеющих
+                            работать в команде, готовых к совершенствованию профессиональных знаний и опыта.</p>
+                    </div>
+                    <div class="career__list_item">
+                        <div class="career__list_item--image"><img src="img/work.svg" alt=""></div>
+                        <div class="career__list_item--title">Обучение</div>
+                        <p class="career__list_item--text">Бизнесс – это Акт искусства, одним из факторов его развития
+                            является постоянное обучение.
+                            Чтобы быть успешным, необходимо сотрудничать и действовать как одно целое, поэтому мы
+                            регулярно развиваем личностный потенциал каждого члена команды совместно с известными
+                            тренерами, политтехнологами и другими ТОП-менеджерами бизнесов. </p>
+                    </div>
+                    <div class="career__list_item">
+                        <div class="career__list_item--image"><img src="img/analytics.svg" alt=""></div>
+                        <div class="career__list_item--title">Карьера</div>
+                        <p class="career__list_item--text">Мы гарантируем, что в нашей компании расти может каждый
+                            сотрудник. Мы исповедуем принцип
+                            кадровой политики вертикального карьерного роста каждого «внутри» кампании.
+                            Раскройте свой потенциал и станьте неотъемлемой частью нашей команды!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="application">
+            <div class="container">
+                <div class="application__title">
+                    Хотите стать частью
+                    GLOBAL BEVERAGE TRADE?
+                </div>
+                <button class="btn btn-subscribe">Отправить заявку</button>
+            </div>
         </div>
 
         <div class="bottom-panel">
@@ -90,6 +197,13 @@
             <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="src/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script>
+        $(".m-scrollbar").mCustomScrollbar();
+    </script>
 </body>
 
 </html>
