--- a/contacts.html
+++ b/contacts.html
@@ -52,9 +52,41 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="about-page">
-        <div class="container">
+    <main class="contacts-page">
+        <div class="top-panel">
+            <div class="container">
+                <div class="breadcrumbs">
+                    <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
+                    <span class="breadcrumbs__item">Контакты</span>
+                </div>
+                <div class="top-panel__title">Контакты
+                </div>
+                <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
+                    организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу
+                    (специалистов) участие в формировании новых предложений.</div>
+            </div>
+        </div>
 
+        <div class="container">
+            <div class="title">Свяжитесь с нами</div>
+            <div class="wrapper">
+                <form class="form">
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input type="email" name="email" placeholder="Ваш E-mail">
+                    <input type="text" name="phone" placeholder="Ваш телефон">
+                    <textarea name="comment" placeholder="Комментарий"></textarea>
+                    <button class="btn btn-contacts">Отправить нам</button>
+                </form>
+                <div class="map" id="map"></div>
+                <ul>
+                    <li><img src="img/placeholder.svg" alt=""> Центральный офис: Укриана, г. Киев, ул.
+                        Машиностроительная, 44а. </li>
+                    <li><img src="img/earth-globe.svg" alt=""> www.gbt.com.ua</li>
+                    <li><img src="img/call-answer.svg" alt=""> Департамент Продаж, тел. <span class="phone-number">
+                            +38 067***-**-**</span></li>
+            </div>
+        </div>
         </div>
 
         <div class="bottom-panel">
@@ -90,6 +122,31 @@
             <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+
+    <script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: 50.4495, lng: 30.4256 },
+                zoom: 17,
+                disableDefaultUI: true
+            });
+
+            var marker = new google.maps.Marker({
+                position: { lat: 50.4494, lng: 30.4255 },
+                map: map,
+                title: 'Hello World!'
+            });
+        }
+
+        $('.phone-number').on('click', function () {
+            $(this).text('+38 067777-77-77');
+        });
+    </script>
 </body>
 
 </html>
