--- a/distribution.html
+++ b/distribution.html
@@ -122,7 +122,7 @@
                 </div>
                 <form class="form">
                     <div class="form-title">Хотите быть в курсе новостей?</div>
-                    <input type="text" placeholder="Введите ваш Email">
+                    <input type="text" placeholder="Введите ваш Email" required>
                     <button class="btn btn-subscribe">Подписаться</button>
                 </form>
             </div>
