--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="public/app.js"></script>
+    <script src="src/main.js"></script>
+    <script src="src/modal.js"></script>
 </body>
 
 </html>
