--- a/career.html
+++ b/career.html
@@ -208,7 +208,7 @@
                 <input type="text" name="name" placeholder="Ваше имя" required>
                 <input type="email" name="email" placeholder="Ваш E-mail" required>
                 <textarea name="comment" placeholder="Комментарий" required></textarea>
-                <label class="file-upload"><img src="" alt="">
+                <label class="file-upload"><img src="img/clip.png" alt="">
                     <span>Прикрепить файл</span>
                     <input type="file" required>
                 </label>
