--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             <div class="title title-about">О нас</div>
             <div class="about-list">
                 <div class="about-list__item">
-                    <div class="about-list__item--image"></div>
+                    <div class="about-list__item--image"><img src="img/leaf.png" alt=""></div>
                     <div class="about-list__item--title"> GLOBAL BEVERAGE TRADE</div>
                     <div class="about-list__item--text"> основана в 1996 году, динамично развивающаяся дистрибьюционная
                         кампания как собтсвенных торговых
@@ -100,7 +100,7 @@
                     <div class="about-list__item--image"><img src="img/wine.svg" alt=""></div>
                 </div>
                 <div class="about-list__item">
-                    <div class="about-list__item--image"></div>
+                    <div class="about-list__item--image"><img src="img/hand-shake.png" alt=""></div>
                     <div class="about-list__item--title"> ПАРТНЕРЫ</div>
                     <div class="about-list__item--text">Нашими партнёрами являются 80 ведущих дистрибьюторов и 16
                         национальных сетевых магазинов по всей
