--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <span class="breadcrumbs__item">О компании</span>
                 </div>
                 <div class="top-panel__title">О компании
-                    <!-- <img src="img/hand-shake.png" alt="">     -->
+                    <img src="img/handshake.png" alt="">    
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
