--- a/contacts.html
+++ b/contacts.html
@@ -60,6 +60,7 @@
                     <span class="breadcrumbs__item">Контакты</span>
                 </div>
                 <div class="top-panel__title">Контакты
+                    <img src="img/phone-call.png" alt="">
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
