--- a/distribution_export.html
+++ b/distribution_export.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="top-panel__title">
                     Дистрибуция
-                    <!-- <img src="img/mass-production.svg" alt=""> -->
+                    <img src="img/mass-production.svg" alt="">
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
