--- a/career.html
+++ b/career.html
@@ -122,10 +122,10 @@
                 <div class="title">Карьера в GBT</div>
                 <div class="career__text">
                     Вас ожидает уникальный опыт работы в кампании-производителе алкогольного направления, командировки и
-                    тренинги, общение с профессионалами своего дела.
+                    тренинги, общение с профессионалами своего дела. 
                 </div>
                 <div class="career__list">
-                    <div class="career__list_item">
+                    <div class="career__list_item" data-animate>
                         <div class="career__list_item--image"><img src="img/command.png" alt=""></div>
                         <div class="career__list_item--title">ЛЮДИ</div>
                         <p class="career__list_item--text">Мы – команда, изменяющая мир; мы принимаем смелые решения,
@@ -133,7 +133,7 @@
                             общей целью. Мы ценим целеустремлённых, инициативных, энергичных и творческих людей, умеющих
                             работать в команде, готовых к совершенствованию профессиональных знаний и опыта.</p>
                     </div>
-                    <div class="career__list_item">
+                    <div class="career__list_item" data-animate>
                         <div class="career__list_item--image"><img src="img/work.svg" alt=""></div>
                         <div class="career__list_item--title">Обучение</div>
                         <p class="career__list_item--text">Бизнесс – это Акт искусства, одним из факторов его развития
@@ -142,7 +142,7 @@
                             регулярно развиваем личностный потенциал каждого члена команды совместно с известными
                             тренерами, политтехнологами и другими ТОП-менеджерами бизнесов. </p>
                     </div>
-                    <div class="career__list_item">
+                    <div class="career__list_item" data-animate>
                         <div class="career__list_item--image"><img src="img/analytics.svg" alt=""></div>
                         <div class="career__list_item--title">Карьера</div>
                         <p class="career__list_item--text">Мы гарантируем, что в нашей компании расти может каждый
@@ -221,6 +221,7 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="src/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="src/modal.js"></script>
+    <script src="src/animate.js"></script>
     <script>
         $(".m-scrollbar").mCustomScrollbar();
     </script>
