--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="title title-about">О нас</div>
             <div class="about-list">
-                <div class="about-list__item">
+                <div class="about-list__item" data-animate>
                     <div class="about-list__item--image"><img src="img/leaf.png" alt=""></div>
                     <div class="about-list__item--title"> GLOBAL BEVERAGE TRADE</div>
                     <div class="about-list__item--text"> основана в 1996 году, динамично развивающаяся дистрибьюционная
@@ -86,7 +86,7 @@
                         более
                         11 тыс м.кв.</div>
                 </div>
-                <div class="about-list__item">
+                <div class="about-list__item" data-animate>
                     <div class="about-list__item--title"> НАШИ ПРОДУКТЫ</div>
                     <div class="about-list__item--text">основана в 1996 году, динамично развивающаяся дистрибьюционная
                         кампания как собтсвенных торговых
@@ -99,7 +99,7 @@
                         11 тыс м.кв.</div>
                     <div class="about-list__item--image"><img src="img/wine.svg" alt=""></div>
                 </div>
-                <div class="about-list__item">
+                <div class="about-list__item" data-animate>
                     <div class="about-list__item--image"><img src="img/hand-shake.png" alt=""></div>
                     <div class="about-list__item--title"> ПАРТНЕРЫ</div>
                     <div class="about-list__item--text">Нашими партнёрами являются 80 ведущих дистрибьюторов и 16
@@ -150,7 +150,7 @@
         <div class="values">
             <div class="container">
                 <div class="title title-values">Ценности</div>
-                <div class="values__list">
+                <div class="values__list" data-animate>
                     <div class="values__list-item"><img src="img/worth1.png" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">01</div>
@@ -218,6 +218,8 @@
             <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
+
+    <script src="src/animate.js"></script>
 </body>
 
 </html>
