--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle"><img src="img/leaf.png" alt=""> «GBT» - Power of Evolution
+                <div class="header-description__subtitle"><img src="img/GBT_logo.svg" alt=""> «GBT» - Power of Evolution
                 </div>
                 <div class="header-description__title">ДИСТРИБЬЮЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
