--- a/career.html
+++ b/career.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>GBT</title>
     <link rel="stylesheet" href="public/style.css" />
+    <link rel="stylesheet" href="scss/jquery.mCustomScrollbar.min.css" />
     <!-- Fix for iOS Safari zooming bug -->
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" />
