--- a/career.html
+++ b/career.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="career__list">
                     <div class="career__list_item" data-animate>
-                        <div class="career__list_item--image"><img src="img/command.png" alt=""></div>
+                        <div class="career__list_item--image"><img src="img/command.svg" alt=""></div>
                         <div class="career__list_item--title">ЛЮДИ</div>
                         <p class="career__list_item--text">Мы – команда, изменяющая мир; мы принимаем смелые решения,
                             мыслим глобально и работаем с
@@ -213,7 +213,9 @@
                     <span>Прикрепить файл</span>
                     <input type="file" required>
                 </label>
-                <button class="btn btn-contacts">Отправить нам</button>
+                <div>
+                        <button class="btn btn-contacts">Отправить нам</button>
+                </div>
             </form>
         </div>
     </div>
