--- a/distribution.html
+++ b/distribution.html
@@ -69,7 +69,7 @@
             </div>
             <div class="map__info">
                 <div class="map__info-buttons">
-                    <a href="distribution.html"> <button class="btn btn-distribution">Дистрибьюция </button></a>
+                    <a href="distribution.html"> <button class="btn btn-distribution">Дистрибуция</button></a>
                     <a href="distribution_export.html"><button class="btn btn-distribution transparent">Export</button></a>
                 </div>
                 <div class="map__info-title">
