--- a/distribution_export.html
+++ b/distribution_export.html
@@ -71,7 +71,7 @@
             </div>
             <div class="map__info">
                 <div class="map__info-buttons">
-                    <a href="distribution.html"> <button class="btn btn-distribution transparent">Дистрибьюция </button></a>
+                    <a href="distribution.html"> <button class="btn btn-distribution transparent">Дистрибуция </button></a>
                     <a href="distribution_export.html"><button class="btn btn-distribution">Export</button></a>
                 </div>
                 <div class="map__info-title">
