--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
                 </div>
 
                 <nav>
-                        <ul>
-                            <li><a href="index.html" class="active"><span>Главная</span></a></li>
-                            <li><a href="about.html"><span>О компании</span></a></li>
-                            <li>
-                                <a href="distribution.html">
-                                    <span>Дистрибуция</span>
-                                </a>
-                                <ul>
-                                    <li><a href="distribution.html">Украина</a></li>
-                                    <li><a href="distribution_export.html">Экспорт</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="products.html"><span>Продукция</span></a>
-                                <ul>
-                                    <li><a href="products.html">Собственные</a></li>
-                                    <li><a href="products_import.html">Импорт</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="career.html"><span>Карьера</span></a></li>
-                            <li><a href="contacts.html"><span>Контакты</span></a></li>
-                        </ul>
-                    </nav>
+                    <ul>
+                        <li><a href="index.html" class="active"><span>Главная</span></a></li>
+                        <li><a href="about.html"><span>О компании</span></a></li>
+                        <li>
+                            <a href="distribution.html">
+                                <span>Дистрибуция</span>
+                            </a>
+                            <ul>
+                                <li><a href="distribution.html">Украина</a></li>
+                                <li><a href="distribution_export.html">Экспорт</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="products.html"><span>Продукция</span></a>
+                            <ul>
+                                <li><a href="products.html">Собственные</a></li>
+                                <li><a href="products_import.html">Импорт</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="career.html"><span>Карьера</span></a></li>
+                        <li><a href="contacts.html"><span>Контакты</span></a></li>
+                    </ul>
+                </nav>
                 <div class="language">
                     <div class="language__active">RU</div>
                 </div>
@@ -57,7 +57,8 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle"><img src="img/GBT_logo--.svg" alt=""> «GBT» - Power of Evolution
+                <div class="header-description__subtitle"><img src="img/GBT_logo--.svg" alt=""> «GBT» - Power of
+                    Evolution
                 </div>
                 <div class="header-description__title">ДИСТРИБУЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
