--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <span class="breadcrumbs__item">О компании</span>
                 </div>
                 <div class="top-panel__title">О компании
-                    <img src="img/handshake.png" alt="">    
+                    <img src="img/handshake.png" alt="">
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
@@ -72,8 +72,13 @@
 
         <div class="container">
             <div class="title title-about">О нас</div>
-            <div class="about-list">
-                <div class="about-list__item" data-animate>
+            <div class="about-list"  data-animate>
+                <div class="about-list__item">
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
+                    <!-- <div class="about-list__item--line"></div> -->
+
                     <div class="about-list__item--image"><img src="img/leaf.png" alt=""></div>
                     <div class="about-list__item--title"> GLOBAL BEVERAGE TRADE</div>
                     <div class="about-list__item--text"> основана в 1996 году, динамично развивающаяся дистрибьюционная
@@ -86,7 +91,10 @@
                         более
                         11 тыс м.кв.</div>
                 </div>
-                <div class="about-list__item" data-animate>
+                <div class="about-list__item">
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
                     <div class="about-list__item--title"> НАШИ ПРОДУКТЫ</div>
                     <div class="about-list__item--text">основана в 1996 году, динамично развивающаяся дистрибьюционная
                         кампания как собтсвенных торговых
@@ -99,7 +107,10 @@
                         11 тыс м.кв.</div>
                     <div class="about-list__item--image"><img src="img/wine.svg" alt=""></div>
                 </div>
-                <div class="about-list__item" data-animate>
+                <div class="about-list__item">
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
+                    <div class="about-list__item--line"></div>
                     <div class="about-list__item--image"><img src="img/hand-shake.png" alt=""></div>
                     <div class="about-list__item--title"> ПАРТНЕРЫ</div>
                     <div class="about-list__item--text">Нашими партнёрами являются 80 ведущих дистрибьюторов и 16
