--- a/products.html
+++ b/products.html
@@ -75,40 +75,40 @@
                 <div class="tm-list__item"><img src="img/own1.png" alt=""></div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own2.png" alt=""></div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own3.png" alt=""></div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own4.png" alt=""></div>
                 <div class="tm-list__item"><img src="img/own5.png" alt=""></div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own6.png" alt=""></div>
                 <div class="tm-list__item">
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
+                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
                     </div>
                 </div>
-                <button class="btn btn-subscribe">Импортные ТМ</button>
+                <a href="products_import.html"><button class="btn btn-subscribe">Импортные ТМ</button></a>
             </div>
         
         </div>
