--- a/distribution.html
+++ b/distribution.html
@@ -65,7 +65,8 @@
         </div>
         <div class="map">
             <div class="map__image">
-                <img src="img/ukraine.svg" alt="">
+                <!-- <img src="img/ukraine.svg" alt=""> -->
+                <img src="img/pinmap.png" alt="">
             </div>
             <div class="map__info">
                 <div class="map__info-buttons">
